[gd_scene load_steps=4 format=3 uid="uid://326lsgrnmjo8"]

[ext_resource type="Script" path="res://Scripts/PlayerMovement.gd" id="1_ed03t"]
[ext_resource type="Texture2D" uid="uid://b7joq1f8eak7h" path="res://icon.svg" id="2_o7r7i"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gajrw"]

[node name="player_controller_xrae" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.116, 1.85996, 4.10416)
script = ExtResource("1_ed03t")
jump_height = 8.0
jump_time_to_peak = 0.5
jump_time_to_descent = 0.4

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.878709, 0, 0, 0, 1.75445, 0, 0, 0, 1, 0, 0, 0)
texture = ExtResource("2_o7r7i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_gajrw")

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
